Accel/decel Skrollr hack garbage crap shit
Ugh… Tried to work my old 6.slippyd.com accel/decel easing code to work with Skrollr's `easing` config hook— but this probably isn't going to work out, even with a fair amount of hacking.

A bunch of these changes should be changed back once I do find a working solution.  Leaving them in here as-is for now because this is a

• Modified skrollr.js to also pass:
	◦ the `domElement`
	◦ the CSS property `key`
	◦ pre-ease `linearValue`
	◦ a `computerValueGetter` (lambda which calls Skrollr's internal `_parseProp( getStyle(…).getPropertyValue(…) )`.
	◦ a `newValueSetter` (lambda which calls Skrollr's internal `_interpolateString();` -> `element.setAttribute(…)`/`skroller.setStyle(…)`
	◦ an object with `left:` and `right:` prop values
	» And even with all that, I can't get it to work correctly.  Mainly, the setter seems to have no immediate effect, but it could be a number of things.  It's likely that Skrollr is state-conditional and there's no way to hack what they're doing without re-writing or re-creating the functionality.
	• Changed index.html to link to our modified `skrollr.js` instead of `skrollr.min.js`.
• Added a hacked version of the simplified accel/decel formula to the skrollr `easing` option as `accelDecel`, via a standalone `accelDecelSkrollrEasing()` function with an inner `_step()` function.
	» There could be a lot to explain here, but… it's just copied and restructured from logo.js.  That's the most-important context here.
	• Changed the starfield4pos animation to use `accelDecel`.
• Added my old `logo.js` for reference.
	» Added to a new `notes/` dir; also moved `googleWOFFChoices.txt` there.
• Minor: Turned Skrollr's smoothScrolling off via the option flag, since we're doing our own easing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6525,10 +6525,10 @@ body {
 }
 @-skrollr-keyframes starfield4pos {
   start {
-    background-position[swing]: 0px 0px;
+    background-position[accelDecel]: 0px 0px;
   }
   top-bottom {
-    background-position[swing]: 0px -115px;
+    background-position[accelDecel]: 0px -115px;
   }
 }
 
