--- a/css/styles.css
+++ b/css/styles.css
@@ -6351,7 +6351,14 @@ body {
   height: 100%;
 }
 .monologue {
-  font: 50px 'Dancing Script';
+  font: 50px "Dancing Script", cursive;
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Dancing Script";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Dancing Script Bold"), local("DancingScript-Bold"), url("/fonts/assets/DancingScript-Bold.woff") format("woff"), url("/fonts/assets/DancingScript-Bold.ttf") format("truetype");
 }
 .phase {
   position: relative;
