--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,7 @@
+@import "/fonts/cabin.less";
+@import "/fonts/cabin-condensed.less";
+@import "/fonts/cabin-sketch.less";
+@import "/fonts/codystar.less";
 @import "/fonts/dancing-script.less";
 @import "/fonts/indie-flower.less";
 @import "/fonts/oswald.less";
