--- a/fonts/cabin-italic.less
+++ b/fonts/cabin-italic.less
@@ -2,7 +2,7 @@
 @font-style_cabin-italic: italic;
 @font-weight_cabin-italic: 700;
 
-.font-face_cabin-italic() {
+.font-face_cabin-italic {
 	@font-face {
 		font-family: "Cabin";
 		font-style: @font-style_cabin-italic;
@@ -15,13 +15,15 @@
 }
 
 .font_cabin-italic() {
-	.font-face_cabin-italic();
+	&:extend(.font-face_cabin-italic);
+	
 	font-family: @font-family-list_cabin-italic;
 	font-style: @font-style_cabin-italic;
 	font-weight: @font-weight_cabin-italic;
 }
 .font_cabin-italic(@properties) {
-	.font-face_cabin-italic();
+	&:extend(.font-face_cabin-italic);
+	
 	font: @properties @font-family-list_cabin-italic;
 	font-style: @font-style_cabin-italic;
 	font-weight: @font-weight_cabin-italic;
