--- a/less/main.less
+++ b/less/main.less
@@ -24,7 +24,7 @@ html, body { height: 100%; }
 .generate-screenheights(@screenheights, vh-);
 
 .monologue {
-	.font_dancing-script-bold(50px);
+	.font_dancing-script(50px);
 }
 
 
